:wheelchair: [#5047] Show "not filled in" when a field is empty in the submission report pdf
To indicate when a field has been left empty by the user, show "No information provided" in the place where the filled in information would have been.
This also helps screen reader users identify which fields aren't filled in.

--- a/src/openforms/submissions/templates/report/submission_report.html
+++ b/src/openforms/submissions/templates/report/submission_report.html
@@ -82,7 +82,11 @@
                                                 </span>
 
                                                 <div aria-labelledby="{{ node_path }}" class="submission-step-row__value{% if not component_node.display_value %} submission-step-row__value--empty{% endif %}">
-                                                    {{ component_node.display_value|default:"" }}
+                                                    {% if component_node.display_value %}
+                                                        {{ component_node.display_value }}
+                                                    {% elif not component_node.layout_modifier %}
+                                                        {% trans "No information provided" %}
+                                                    {% endif %}
                                                 </div>
                                             {% endwith %}
                                         {% endif %}
