:wheelchair: [#5047] Removing whitespace from pdf title
Without the `spaceless` tags the pdf will be generated with leading and trailing whitespace. This whitespace only visible/noticeable when you look at the title in the pdf metadata.

--- a/src/openforms/submissions/templates/report/submission_report.html
+++ b/src/openforms/submissions/templates/report/submission_report.html
@@ -6,11 +6,13 @@
 <html lang="{{ LANG }}" class="{{ theme.get_classname }}">
     <head>
         <meta charset="utf-8">
-        <title>{% block title %}
-            {% blocktrans with form_name=report.form.name trimmed %}
-                {{ form_name }}: PDF report
-            {% endblocktrans %}
-        {% endblock %}</title>
+        <title>{% spaceless %}
+            {% block title %}
+                {% blocktrans with form_name=report.form.name trimmed %}
+                    {{ form_name }}: PDF report
+                {% endblocktrans %}
+            {% endblock %}
+        {% endspaceless %}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="{% static 'bundles/pdf-css.css' %}" media="all" rel="stylesheet" />
         {% block extra_css %}{% endblock %}
