--- a/src/openforms/authentication/templates/of_authentication/registrator_subject_info.html
+++ b/src/openforms/authentication/templates/of_authentication/registrator_subject_info.html
@@ -31,29 +31,32 @@
 
                 {% include "includes/forms/field_wrapper.html" with field=form.bsn type='bsn' only %}
 
-                <div class="openforms-toolbar openforms-toolbar--reverse">
-                    <button class="utrecht-button utrecht-button--primary-action" type="submit">
+                <p role="group" class="utrecht-button-group utrecht-button-group--column utrecht-button-group--distanced">
+                    <button class="utrecht-button utrecht-button--submit utrecht-button--primary-action openforms-button-with-icon" type="submit">
                         {% trans "Continue" %}
+                        <i class="fa fas fa-icon fa-arrow-right-long" aria-hidden="true"></i>
                     </button>
-                </div>
+                </p>
             </div>
 
             <div class="auth-mode auth-mode--company">
                 {% include "includes/forms/field_wrapper.html" with field=form.kvk only %}
 
-                <div class="openforms-toolbar openforms-toolbar--reverse">
-                    <button class="utrecht-button utrecht-button--primary-action" type="submit">
+                <p role="group" class="utrecht-button-group utrecht-button-group--column utrecht-button-group--distanced">
+                    <button class="utrecht-button utrecht-button--submit utrecht-button--primary-action openforms-button-with-icon" type="submit">
                         {% trans "Continue" %}
+                        <i class="fa fas fa-icon fa-arrow-right-long" aria-hidden="true"></i>
                     </button>
-                </div>
+                </p>
             </div>
 
             <div class="auth-mode auth-mode--employee">
-                <div class="openforms-toolbar openforms-toolbar--reverse">
-                    <button class="utrecht-button utrecht-button--primary-action" type="submit" name="skip_subject" value="on">
+                <p role="group" class="utrecht-button-group utrecht-button-group--column utrecht-button-group--distanced">
+                    <button class="utrecht-button utrecht-button--submit utrecht-button--primary-action openforms-button-with-icon" type="submit" name="skip_subject" value="on">
                         {{ form.skip_subject.label }}
+                        <i class="fa fas fa-icon fa-arrow-right-long" aria-hidden="true"></i>
                     </button>
-                </div>
+                </p>
             </div>
 
         </form>
